# ja

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  release-plz.toml  release.toml
.github/workflows/: ci.yml  release-plz.yml
src/: cli.rs  demo.tape  lib.rs  main.rs
src/assets/: code-prompt.md  code-prompt.txt  code-review.md  experts-interview.md  experts-prompt.txt  prompt-engineer.md
xtask/: CHANGELOG.md  Cargo.toml
xtask/src/: main.rs
