[workspace]
members = ["xtask"]

[package]
name = "ja"
version = "0.1.29"
authors = ["Josh McKinney <joshka>"]
edition = "2021"
description = "ja (just ask) is a small CLI / TUI app that allows you to work with AI tools"
repository = "https://github.com/joshka/ja"
license = "MIT"
keywords = ["cli", "openai", "gpt", "tui", "ai"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.95"
async-openai = "0.26.0"
clap = { version = "4.5.28", features = ["derive"] }
derive_builder = "0.20.1"
dialoguer = { version = "0.11.0" }
directories = "5.0.1"
futures = "0.3.31"
serde = "1.0.217"
serde_json = "1.0.138"
strum = "0.27.0"
strum_macros = "0.27"
time = { version = "0.3.37", features = ["formatting"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
