[workspace]
members = ["xtask"]

[package]
name = "ja"
version = "0.1.31"
authors = ["Josh McKinney <joshka>"]
edition = "2021"
description = "ja (just ask) is a small CLI / TUI app that allows you to work with AI tools"
repository = "https://github.com/joshka/ja"
license = "MIT"
keywords = ["cli", "openai", "gpt", "tui", "ai"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
async-openai = "0.26.0"
clap = { version = "4.5.51", features = ["derive"] }
derive_builder = "0.20.1"
dialoguer = { version = "0.12.0" }
directories = "6.0.0"
futures = "0.3.31"
serde = "1.0.228"
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27"
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
