[workspace]
members = ["xtask"]

[package]
name = "ja"
version = "0.1.31"
authors = ["Josh McKinney <joshka>"]
edition = "2021"
description = "ja (just ask) is a small CLI / TUI app that allows you to work with AI tools"
repository = "https://github.com/joshka/ja"
license = "MIT"
keywords = ["cli", "openai", "gpt", "tui", "ai"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.101"
async-openai = "0.32.4"
clap = { version = "4.5.58", features = ["derive"] }
derive_builder = "0.20.1"
dialoguer = { version = "0.12.0" }
directories = "6.0.0"
futures = "0.3.32"
serde = "1.0.228"
serde_json = "1.0.149"
strum = "0.27.2"
strum_macros = "0.27"
time = { version = "0.3.47", features = ["formatting"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
