[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
cli-xtask = { version = "0.10.1", features = [
    "main",
    "bin-crate",
    "bin-crate-extra",
] }
ja = { path = "../" }
